--- a/ayayay-style.css
+++ b/ayayay-style.css
@@ -4,7 +4,7 @@
 
 			font-size: 62.5%;
 
-			--logo-orange: #ea591d;
+			--logofarve: #ea591d;
 
 		}
 
@@ -45,6 +45,12 @@
 			grid-column: 2 / span 1;
 			align-self: center;
 			padding: 0 0 40px;
+			opacity: 1;
+		}
+
+		.logo.hide {
+			opacity: 0;
+			pointer-events: none;
 		}
 
 		/* navigation */
@@ -89,22 +95,50 @@
 		}
 
 		nav {
-			max-height: 0px;
-			overflow: hidden;
-			transition: 0.6s;
-			background: #666;
+			display: none;
 			color: #fff;
 		}
 
 		nav.show {
-			max-height: 500px;
+			display: block;
+			grid-column: 1 / span 3;
+		}
+
+		nav ul {
+			list-style: none;
+			margin: 100px 0 0;
+			padding: 0;
+		}
+
+		nav li {
+			font-size: 2rem;
+			text-transform: uppercase;
+			padding: 5px;
+			cursor: pointer;
+			border-top: 1px solid #fff;
+			text-align: center;
+			padding: 20px;
+		}
+
+		nav li:hover {
+			color: #000;
+			background-color: #fff;
+		}
+
+		nav li:last-child {
+			border-bottom: 1px solid #fff;
 		}
 
 		/* media queries */
 
 		@media screen and (min-width: 480px) {}
 
-		@media screen and (min-width: 736px) {}
+		@media screen and (min-width: 768px) {
+
+			.burger {
+				display: none;
+			}
+		}
 
 		@media screen and (min-width: 980px) {}
 
