--- a/test_2 - nyt grid/style.css
+++ b/test_2 - nyt grid/style.css
@@ -1,15 +1,16 @@
 		/* root */
 
 		:root {
-
 			font-size: 62.5%;
 
+			/* farvevariabler */
 			--fontfarve: #222222;
 			--logofarve: #ea591d;
-			--bundfarve: rgba(0, 0, 0, 0.90);
+			--darkwrapper: rgba(0, 0, 0, 0.75);
+			--darkwrapper_hover: rgba(0, 0, 0, 0.90);
 			--footer_rubrik: #fff;
 			--footer_afsnit: #8b8b8b;
-
+			--footer_bundfarve: rgba(0, 0, 0, 90);
 		}
 
 		/* generelt */
@@ -18,7 +19,7 @@
 			margin: 0;
 			padding: 0;
 			overflow-x: hidden;
-			font-size: 2rem;
+			font-size: 1.75rem;
 			font-family: 'Open Sans', sans-serif;
 			display: relative;
 			color: var(--fontfarve);
@@ -49,22 +50,28 @@
 		}
 
 		.darkwrapper {
-			background-color: var(--bundfarve);
+			background-color: var(--darkwrapper);
 			height: 50%;
 			display: grid;
 			grid-template-columns: 1fr minmax(auto, 300px) 1fr;
 			grid-template-columns: 1fr auto 1fr;
-			transition: height 1s;
+			transition: height 0.5s;
+			transition: background-color 0.5s;
+		}
+
+		.darkwrapper:hover {
+			background-color: var(--darkwrapper_hover);
 		}
 
 		.darkwrapper.high {
 			height: 100%;
+			background-color: var(--darkwrapper_hover);
 		}
 
 		.logo {
 			grid-column: 2 / span 1;
 			align-self: center;
-			padding: 0 0 20px;
+			padding: 0 0 30px;
 			opacity: 1;
 			transition: opacity 1s;
 		}
@@ -159,8 +166,6 @@
 			border-bottom: 1px solid #fff;
 		}
 
-
-
 		.container {
 			background-color: red;
 			margin: 0 auto;
@@ -180,7 +185,7 @@
 		/* Footer */
 
 		footer {
-			background-color: var(--bundfarve);
+			background-color: var(--footer_bundfarve);
 			color: var(--footer_fontfarve);
 		}
 
@@ -188,12 +193,13 @@
 			display: grid;
 			grid-template-columns: 1fr;
 			grid-gap: 20px;
-			padding: 12vw 12vw 20vw;
+			padding: 10vw 10vw 15vw 10vw;
 		}
 
 		footer p {
 			color: var(--footer_afsnit);
 			margin: 5px 0 5px;
+			max-width: 90%;
 		}
 
 
@@ -214,6 +220,7 @@
 			max-width: 30px;
 			max-height: 30px;
 			margin: 10px 10px 0 0;
+
 		}
 
 		footer .copyright {
@@ -249,16 +256,102 @@
 			}
 		}
 
-		@media screen and (min-width: 768px) {}
+		@media screen and (min-width: 768px) {
 
-		@media screen and (min-width: 980px) {}
+			body {
+				font-size: 1.6rem;
+			}
+
+			header {
+				height: 430px;
+			}
+
+			.darkwrapper {
+				grid-template-columns: 1fr minmax(auto, 250px) 1fr;
+			}
+
+			.logo {
+				padding: 0 0 15px;
+			}
+
+			.burger {
+				display: none;
+			}
+
+			nav {
+				position: absolute;
+				right: 0px;
+				color: #fff;
+				opacity: 1;
+				width: auto;
+				padding: 20px 30px 0 0;
+				pointer-events: all;
+			}
+
+			nav ul {
+				display: block;
+				margin: 0 0 0;
+				padding: 0;
+				width: auto;
+			}
+
+			nav li {
+				font-size: 1.6rem;
+				text-transform: uppercase;
+				cursor: pointer;
+				border-top: 0px solid #fff;
+				text-align: right;
+				padding: 3px 0 6px 0;
+			}
+
+			nav li:hover {
+				color: var(--logofarve);
+				transition: 0.5s;
+				background-color: transparent;
+			}
+
+			nav li:last-child {
+				border-bottom: 0px solid #fff;
+			}
+
+			nav li:nth-child(2n+1) {
+				border-right: 0px solid #fff;
+			}
+			nav li:nth-last-child(2) {
+				border-bottom: 0px solid #fff;
+			}
+
+			footer .content {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				padding: 10vw 10vw 15vw 10vw;
+			}
+		}
+
+		@media screen and (min-width: 980px) {
+
+			body {
+				font-size: 1.6rem;
+			}
+
+			footer .content {
+				display: grid;
+				grid-template-columns: 1fr 1fr 1fr;
+				padding: 7vw 7vw 10vw 7vw;
+				grid-gap: 20px;
+			}
+		}
 
 		@media screen and (min-width: 1024px) {
+
+			body {
+				font-size: 1.4rem;
+			}
 
 			footer {
 				display: grid;
 				grid-template-columns: 1fr 1024px 1fr;
-				background-color: var(--bundfarve);
+				background-color: var(--footer_bundfarve);
 				color: var(--footer_fontfarve);
 			}
 
@@ -267,8 +360,27 @@
 				grid-column: 2 / span 1;
 				grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 				grid-gap: 30px;
+				padding: 3vw 0 5vw 0;
 			}
 		}
 
 
-		@media screen and (min-width: 1280px) {}
+		@media screen and (min-width: 1280px) {
+
+			nav ul {
+				display: flex;
+				margin: 0 0 0 0;
+				padding: 0;
+				width: auto;
+			}
+
+			nav li {
+				font-size: 1.6rem;
+				text-transform: uppercase;
+				cursor: pointer;
+				border-top: 0px solid #fff;
+				text-align: right;
+				padding: 3px 0 6px 0;
+				margin: 0 1vw 0 0;
+			}
+		}
