--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 			--fontfarve: #222222;
 			--logofarve: #ea591d;
 			--darkwrapper: rgba(0, 0, 0, 0.75);
+			--darkwrapper: rgba(22, 13, 9, 0.70);
 			--darkwrapper_hover: rgba(0, 0, 0, 0.90);
 			--footer_rubrik: #fff;
 			--footer_afsnit: #8b8b8b;
@@ -360,10 +361,9 @@
 				grid-column: 2 / span 1;
 				grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 				grid-gap: 30px;
-				padding: 3vw 0 5vw 0;
+				padding: 3vw 3vw 10vw 3vw;
 			}
 		}
-
 
 		@media screen and (min-width: 1280px) {
 
@@ -374,13 +374,10 @@
 				width: auto;
 			}
 
-			nav li {
-				font-size: 1.6rem;
-				text-transform: uppercase;
-				cursor: pointer;
-				border-top: 0px solid #fff;
-				text-align: right;
-				padding: 3px 0 6px 0;
-				margin: 0 1vw 0 0;
+			footer {
+				display: grid;
+				grid-template-columns: 1fr 1280px 1fr;
+				background-color: var(--footer_bundfarve);
+				color: var(--footer_fontfarve);
 			}
 		}
