--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@
 		.nav-knap {
 			position: fixed;
 			right: 0;
+			top: 0;
 			width: auto;
 			height: auto;
 			line-height: 0;
@@ -119,7 +120,7 @@
 			z-index: 100;
 		}
 
-		.burger {
+		.nav-knap .burger {
 			cursor: pointer;
 			background: transparent;
 			border: none;
@@ -502,6 +503,57 @@
 			border-bottom: 1px solid #fff;
 		}
 
+		/* filter-knap */
+
+		.filter-knap {
+			position: fixed;
+			right: 0;
+			top: 0px;
+			width: auto;
+			height: auto;
+			line-height: 0;
+			padding: 25px;
+			z-index: 120;
+			opacity: 0;
+			pointer-events: none;
+		}
+
+		.filter-knap.show {
+			opacity: 1;
+			pointer-events: all;
+		}
+
+		.filter-burger {
+			cursor: pointer;
+			background: transparent;
+			border: none;
+		}
+
+		.filter-bar1,
+		.filter-bar2,
+		.filter-bar3 {
+			width: 35px;
+			height: 3px;
+			margin: 9px 0;
+			transition: 0.4s;
+			box-shadow: 1px 1px 10px #000, 1px 1px 10px #ccc;
+		}
+
+		.filter-change .filter-bar1 {
+			-webkit-transform: rotate(-45deg) translate(-9px, 9px);
+			transform: rotate(-45deg) translate(-9px, 9px);
+		}
+
+		.filter-change filter-bar2 {
+			opacity: 0;
+		}
+
+		.filter-change filter-bar3 {
+			-webkit-transform: rotate(45deg) translate(-7px, -8px);
+			transform: rotate(45deg) translate(-7px, -8px);
+			box-shadow: 1px 1px 10px transparent, 1px 1px 10px transparent;
+		}
+
 
 		/* Footer */
 
@@ -549,10 +601,6 @@
 			font-size: 70%;
 			margin: 20px 0 0;
 		}
-
-
-
-
 
 
 		/*
