--- a/style.css
+++ b/style.css
@@ -120,15 +120,15 @@
 			z-index: 100;
 		}
 
-		.nav-knap .burger {
+		.burger {
 			cursor: pointer;
 			background: transparent;
 			border: none;
 		}
 
-		.nav-knap .bar1,
-		.nav-knap .bar2,
-		.nav-knap .bar3 {
+		.bar1,
+		.bar2,
+		.bar3 {
 			width: 35px;
 			height: 3px;
 			background-color: #fff;
@@ -137,16 +137,16 @@
 			box-shadow: 1px 1px 10px #000, 1px 1px 10px #ccc;
 		}
 
-		.nav-knap .change .bar1 {
+		.change .bar1 {
 			-webkit-transform: rotate(-45deg) translate(-9px, 9px);
 			transform: rotate(-45deg) translate(-9px, 9px);
 		}
 
-		.nav-knap .change .bar2 {
+		.change .bar2 {
 			opacity: 0;
 		}
 
-		.nav-knap .change .bar3 {
+		.change .bar3 {
 			-webkit-transform: rotate(45deg) translate(-7px, -8px);
 			transform: rotate(45deg) translate(-7px, -8px);
 			box-shadow: 1px 1px 10px transparent, 1px 1px 10px transparent;
