--- a/style.css
+++ b/style.css
@@ -55,13 +55,14 @@
 
 		.darkwrapper {
 			background-color: var(--darkwrapper);
-			height: 50%;
+			width: 100%;
+			height: 55%;
 			display: grid;
 			grid-template-columns: 1fr minmax(auto, 300px) 1fr;
-			grid-template-columns: 1fr auto 1fr;
+			grid-template-rows: 1fr auto 1fr;
 			transition: height 0.5s;
 			transition: background-color 0.5s;
-			z-index: 50
+			z-index: 50;
 		}
 
 		.darkwrapper:hover {
@@ -77,10 +78,12 @@
 
 		.logo {
 			grid-column: 2 / span 1;
+			grid-row: 2 / span 1;
 			align-self: center;
-			padding: 0 0 30px;
+			padding: 0 0 10%;
 			opacity: 1;
 			transition: opacity 1s;
+			z-index: 200;
 		}
 
 		.logo.hide {
@@ -365,7 +368,7 @@
 		/*menu content-grid*/
 
 		#menu .content {
-			padding: 3rem 3rem 5rem;
+			padding: 3rem 0 5rem;
 		}
 
 		#menu .content .data-container {
@@ -383,10 +386,11 @@
 		}
 
 		#menu .filter-menu-wrapper {
-			display: flex;
+			display: block;
 			justify-content: space-between;
 			align-items: center;
-			margin: 0 0 2rem;
+			margin: 0 3rem 3rem;
+			line-height: 0;
 		}
 
 		#menu .filter-menu {
@@ -607,33 +611,6 @@
 - - - - - - - - - - - - - media queries - - - - - - - - - - - - -
 */
 
-		@media screen and (orientation: landscape) {
-
-			/*	header - nav */
-			nav ul {
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-			}
-			nav li:nth-child(2n+1) {
-				border-right: 1px solid #fff;
-			}
-			nav li:nth-last-child(2) {
-				border-bottom: 1px solid #fff;
-			}
-
-			/*	filter-menu */
-			.filter-darkwrapper ul {
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-			}
-			.filter-darkwrapper li:nth-child(2n+1) {
-				border-right: 1px solid #fff;
-			}
-			.filter-darkwrapper li:nth-last-child(2) {
-				border-bottom: 1px solid #fff;
-			}
-		}
-
 		/*
 - - - - - - - - - - - - - 480 landscape - - - - - - - - - - - - -
 */
@@ -642,19 +619,19 @@
 
 			/*	content-grid 480px landscape */
 			#om .content {
-				padding: 4rem 4rem 6rem;
+				padding: 3rem 3rem 6rem;
 			}
 
 			#feature .content {
-				padding: 4rem 4rem 6rem;
+				padding: 0 0 6rem;
 			}
 
 			#menu .content {
-				padding: 4rem 4rem 6rem;
+				padding: 3rem 0 6rem;
 			}
 
 			footer .content {
-				padding: 4rem 4rem 6rem;
+				padding: 3rem 4rem 6rem;
 			}
 
 			/*	header - nav */
@@ -705,7 +682,14 @@
 			}
 
 			#menu .content {
-				padding: 5rem 5rem 7rem;
+				padding: 5rem 0 7rem;
+			}
+
+			#menu .filter-menu-wrapper {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				margin: 0 3rem 2rem;
 			}
 
 			#menu .content .data-container {
@@ -878,6 +862,10 @@
 
 			#feature .content {
 				grid-template-columns: 1fr 1fr 1fr;
+			}
+
+			#menu .content {
+				padding: 3rem 3rem 5rem;
 			}
 
 			#menu .content .data-container {
